--- a/responsive-news-site/webroot/css/buttons.css
+++ b/responsive-news-site/webroot/css/buttons.css
@@ -6,6 +6,7 @@
   color: #fff;
   text-transform: uppercase;
   font-size: 0.75rem;
+  line-height: 1;
   font-weight: 700;
   border-radius: 0.375rem;
 }
