--- a/responsive-news-site/webroot/css/defaults.css
+++ b/responsive-news-site/webroot/css/defaults.css
@@ -6,7 +6,8 @@ html {
 
 body {
   margin: 0;
-  background-color: #f8f8f8;
+  background-color: #F6F8F9;
+  color: #202124;
 }
 
 img {
