--- a/responsive-news-site/webroot/css/featured_article.css
+++ b/responsive-news-site/webroot/css/featured_article.css
@@ -12,11 +12,11 @@
   order: 1;
   margin-block-start: 0;
   padding-block-end: 2.5rem;
+  margin-block-end: 2.5rem;
   border-bottom: 2px solid currentColor;
+  line-height: 1;
 }
 
 #section_featured_article .card_title {
   order: 2;
-  margin-block-end: 0;
-  margin-block-start: 2.5rem;
 }
